--- a/templates/chat.html
+++ b/templates/chat.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 		<script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     </head>
     <body class="body">
 		<div class="header">
@@ -23,7 +22,7 @@
 			</div>
 		</div>
 		<h3 id="chatname" data-name="{{ chatname }}" >Чат {{ chatname }}</h3>
-		<div id="chat" data-login="{{ login }}">
+		<div class="chat-main" id="chat" data-login="{{ login }}">
 			<ul class="chat-area" id="chat_messages">
 				{% for message in list_messages %}
 					<div class="my_chats_links" id="my_links" {% if message[0] == login %} style="justify-content: flex-end" {% endif %}>
@@ -36,10 +35,11 @@
 					</div>
 				{% endfor %}
 			</ul>
-			<input class="input-button" type="text" id="message" placeholder="Введите сообщение:">
+		</div>
+		<div class="chat-input">
+			<input class="chat-input-button" type="text" id="message" placeholder="Введите сообщение:">
 		</div>
 		<script src="{{ url_for('static', filename='js/chat.js') }}"></script>
-		<script src="{{ url_for('static', filename='js/resize_chat_window.js') }}"></script>
 		<script src="{{ url_for('static', filename='js/alert_delete.js') }}"></script>
     </body>
 </html>
