--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,16 +11,28 @@
             <form action="{{ url_for('get_list_chats') }}" method="get">
                 <input class="logo" type="submit" value="Главная">
             </form>
-            <form action="{{ url_for('get_logout') }}" method="get">
-                <input class="exit" type="submit" value="Выйти">
-            </form>
+            <div class="header-right">
+                <form action="{{ url_for('get_logout') }}" method="get">
+                    <input class="exit" type="submit" value="Выйти">
+                </form>
+                <form action="{{ url_for('get_delete_user') }}" method="get">
+                    <input class="delete_user" type="submit" value="Удалить пользователя">
+                </form>
+            </div>
         </div>
-        <h3>Профиль пользователя {{ login }}</h3>
-        <p>{{ message }}</p>
         <div class="profile">
-            <form action="{{ url_for('get_delete_user') }}" method="get">
-                <input class="delete_user" type="submit" value="Удалить пользователя">
-            </form>
+            <h3>Профиль пользователя {{ login }}</h3>
+            <p>{{ message }}</p>
+            <p>
+                Личная информация
+                <form class="profile-form" action="#">
+                    <label for="username">Имя пользователя:</label>
+                    <input type="text" id="username" name="username" maxlength="12" minlength="4" required>
+                    <label for="age">Возраст:</label>
+                    <input type="date" id="age" name="age" required>
+                    <input type="submit" value="Сохранить">
+                </form>
+            </p>
         </div>
         <script src="{{ url_for('static', filename='js/alert_profile.js') }}"></script>
     </body>
